--- a/index.html
+++ b/index.html
@@ -11,212 +11,136 @@
       margin: 0;
       padding: 0;
     }
+
     html, body {
       height: 100%;
+      width: 100%;
     }
+
     body {
       font-family: Verdana, Geneva, sans-serif;
-      background: radial-gradient(circle at top left, #a7c4a0 0, #1e2c24 40%, #101712 100%);
+      background: linear-gradient(135deg, #809462 0%, #596e48 100%);
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #ffffff;
+      padding: 20px;
       overflow: hidden;
     }
 
+    /* Much larger container */
     .hero {
+      width: 95%;
+      max-width: 1400px;
       position: relative;
-      width: 100%;
-      max-width: 1200px;
-      padding: 40px 20px;
-    }
-    .hero::before,
-    .hero::after {
-      content: "";
-      position: absolute;
-      border-radius: 50%;
-      filter: blur(40px);
-      opacity: 0.45;
-      z-index: 0;
-    }
-    .hero::before {
-      width: 320px;
-      height: 320px;
-      background: rgba(199, 219, 178, 0.85);
-      top: -80px;
-      left: -60px;
-    }
-    .hero::after {
-      width: 260px;
-      height: 260px;
-      background: rgba(155, 190, 142, 0.8);
-      bottom: -70px;
-      right: 0;
     }
 
     .card {
-      position: relative;
-      z-index: 1;
       display: flex;
       flex-wrap: wrap;
-      background: linear-gradient(135deg, rgba(14, 24, 19, 0.90), rgba(31, 48, 38, 0.90));
+      width: 100%;
+      min-height: 75vh; /* MUCH larger */
+      background: rgba(14, 24, 19, 0.75);
       border-radius: 28px;
-      box-shadow: 0 28px 60px rgba(0, 0, 0, 0.45);
       border: 1px solid rgba(255, 255, 255, 0.12);
+      box-shadow: 0 25px 60px rgba(0, 0, 0, 0.45);
       overflow: hidden;
-      backdrop-filter: blur(18px);
-      -webkit-backdrop-filter: blur(18px);
+      backdrop-filter: blur(14px);
+      -webkit-backdrop-filter: blur(14px);
     }
-    .card-left,
-    .card-right {
-      padding: 40px;
-      min-width: 280px;
-    }
+
+    /* LEFT SIDE */
     .card-left {
-      flex: 1 1 55%;
+      flex: 1 1 50%;
+      padding: 60px 40px;
       display: flex;
       flex-direction: column;
       justify-content: center;
-    }
-    .card-right {
-      flex: 1 1 45%;
-      position: relative;
-      background: radial-gradient(circle at top, rgba(255, 255, 255, 0.18), transparent 60%);
+      align-items: center; /* center horizontally */
+      text-align: center;
     }
 
-    .logo-row {
-      margin-bottom: 30px;
-    }
     .logo-row img {
-      height: 46px;
-      display: block;
+      height: 50px;
+      margin-bottom: 25px;
     }
 
-    .eyebrow {
-      text-transform: uppercase;
-      letter-spacing: 3px;
-      font-size: 11px;
-      margin-bottom: 12px;
-      color: #d6e3d1;
-      opacity: 0.9;
-    }
     .title {
-      font-size: 46px;
-      line-height: 1.1;
+      font-size: 54px;
       font-weight: 900;
-      margin-bottom: 14px;
+      margin-bottom: 15px;
       color: #ffffff;
     }
+
     .subtitle {
-      font-size: 18px;
+      font-size: 20px;
       color: #d7e1d5;
-      margin-bottom: 30px;
+      margin-bottom: 35px;
     }
+
     .accent-line {
-      width: 70px;
+      width: 60px;
       height: 3px;
-      background: linear-gradient(90deg, #f3d37a, #f5b94c);
-      margin-bottom: 30px;
+      background: linear-gradient(90deg, #f3d37a, #f0b846);
+      margin-bottom: 35px;
       border-radius: 999px;
     }
 
+    /* Smaller, sleeker button */
     .cta-btn {
       display: inline-block;
-      padding: 15px 36px;
+      padding: 12px 26px;
       border-radius: 999px;
-      border: none;
+      font-size: 14px;
+      font-weight: bold;
       background: linear-gradient(135deg, #f3c34e, #f0a92b);
       color: #1f2324;
-      font-weight: bold;
-      font-size: 15px;
-      text-transform: uppercase;
-      letter-spacing: 1px;
       text-decoration: none;
-      box-shadow: 0 14px 30px rgba(0, 0, 0, 0.45);
-      transition: transform 0.12s ease, box-shadow 0.12s ease, filter 0.15s ease;
-      cursor: pointer;
+      letter-spacing: 1px;
+      transition: transform 0.12s ease, box-shadow 0.12s ease;
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.35);
     }
-    .cta-btn:hover,
-    .cta-btn:focus {
-      filter: brightness(1.06);
+
+    .cta-btn:hover {
       transform: translateY(-2px);
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.55);
+      box-shadow: 0 18px 35px rgba(0, 0, 0, 0.45);
       text-decoration: none;
     }
 
-    .image-wrapper {
+    /* RIGHT SIDE */
+    .card-right {
+      flex: 1 1 50%;
       position: relative;
-      height: 100%;
-      min-height: 260px;
+      padding: 40px;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
     }
+
     .image-frame {
       width: 100%;
-      max-width: 360px;
+      max-width: 480px;
       border-radius: 24px;
       overflow: hidden;
       border: 1px solid rgba(255, 255, 255, 0.18);
       box-shadow: 0 18px 40px rgba(0, 0, 0, 0.6);
     }
+
     .image-frame img {
       width: 100%;
       height: 100%;
-      display: block;
       object-fit: cover;
-    }
-    .image-badge {
-      position: absolute;
-      bottom: 26px;
-      left: 40px;
-      padding: 8px 14px;
-      border-radius: 999px;
-      background: rgba(7, 12, 9, 0.88);
-      color: #e5f0dd;
-      font-size: 11px;
-      text-transform: uppercase;
-      letter-spacing: 1.2px;
-      border: 1px solid rgba(220, 236, 209, 0.6);
     }
 
     @media (max-width: 900px) {
-      body {
-        align-items: flex-start;
-        padding-top: 30px;
-      }
       .card {
         flex-direction: column;
+        min-height: 90vh;
       }
-      .card-left,
-      .card-right {
-        padding: 28px 24px 32px;
-      }
-      .title {
-        font-size: 36px;
-      }
-      .subtitle {
-        font-size: 16px;
-      }
-      .image-badge {
-        left: 26px;
-      }
-    }
-    @media (max-width: 600px) {
-      .hero {
-        padding: 20px 12px;
-      }
-      .image-wrapper {
-        min-height: 210px;
-      }
-      .image-frame {
-        max-width: 100%;
-      }
-      .logo-row img {
-        height: 40px;
+      .card-left, .card-right {
+        padding: 40px 20px;
       }
       .title {
-        font-size: 30px;
+        font-size: 38px;
       }
     }
   </style>
@@ -226,14 +150,13 @@
 
   <div class="hero">
     <div class="card">
+
+      <!-- LEFT SIDE -->
       <div class="card-left">
         <div class="logo-row">
-          <!-- Replace with real NOVAXIA logo if you want -->
-          <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
-               alt="NOVAXIA Logo">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg" alt="NOVAXIA Logo">
         </div>
 
-        <div class="eyebrow">Property investment materials</div>
         <div class="title">Thank you!</div>
         <div class="subtitle">Your submission has been recorded.</div>
         <div class="accent-line"></div>
@@ -243,21 +166,18 @@
            href="#"
            target="_blank"
            rel="noopener noreferrer">
-          Download PDF
+          Download PDF →
         </a>
       </div>
 
+      <!-- RIGHT SIDE -->
       <div class="card-right">
-        <div class="image-wrapper">
-          <div class="image-frame">
-            <img src="https://images.pexels.com/photos/3182812/pexels-photo-3182812.jpeg"
-                 alt="Team reviewing investment materials">
-          </div>
-          <div class="image-badge">
-            NOVAXIA • Private brief
-          </div>
+        <div class="image-frame">
+          <img src="https://images.pexels.com/photos/3182812/pexels-photo-3182812.jpeg"
+               alt="Team">
         </div>
       </div>
+
     </div>
   </div>
 
