--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
     body {
       font-family: Verdana, Geneva, sans-serif;
-      background: radial-gradient(circle at top left, #b9d4a8 0%, #2c3f33 40%, #18231b 100%);
+      background: radial-gradient(circle at top left, #b9d4a8 0%, #2c3f33 40%, #809462 100%);
       display: flex;
       align-items: center;
       justify-content: center;
