--- a/commercial.html
+++ b/commercial.html
@@ -65,12 +65,6 @@
       color: #2f3b21;
     }
 
-    .subtitle {
-      font-size: 20px;
-      margin-bottom: 26px;
-      color: #444444;
-    }
-
     .divider {
       width: 60%;
       height: 1px;
@@ -81,7 +75,7 @@
     .btn-download {
       display: inline-block;
       padding: 10px 28px;
-      background-color: #4f5f30;
+      background-color: #576977;
       color: #ffffff;
       border-radius: 4px;
       font-size: 18px;
